fix overflow on mobile

--- a/projects/minesweeper/src/app/app.component.scss
+++ b/projects/minesweeper/src/app/app.component.scss
@@ -1,3 +1,9 @@
+:host {
+  display: block;
+  margin: auto;
+  width: fit-content;
+}
+
 .app-container {
   display: flex;
   align-items: center;
